# service-providers

./: Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml
.github/workflows/: build-and-cache-zomes.yaml  publish-npm.yml  test.yaml
crates/service_providers_types/: Cargo.toml
crates/service_providers_types/src/: lib.rs
crates/service_providers_utils/: Cargo.toml
crates/service_providers_utils/src/: lib.rs
docs/: index.md  introduction.md  package.json  service-providers-store.md  setup.md
docs/.vitepress/: config.mts
tests/: package.json
tests/src/: remove-inactive-providers.test.ts  service-provider.test.ts  setup.ts
ui/: custom-elements.json  package.json
ui/demo/: index.html
ui/src/: context.ts  index.ts  mocks.ts  service-providers-client.ts  service-providers-store.ts  types.ts
ui/src/elements/: service-providers-context.ts
workdir/: dna.nix  dna.yaml  happ.nix  happ.yaml
zomes/coordinator/example_gateway/: Cargo.toml  zome.nix
zomes/coordinator/example_gateway/src/: lib.rs
zomes/coordinator/service_providers/: Cargo.toml  zome.nix
zomes/coordinator/service_providers/src/: lib.rs  providers.rs  service_request.rs  utils.rs
zomes/integrity/service_providers/: Cargo.toml  zome.nix
zomes/integrity/service_providers/src/: all_providers.rs  lib.rs  service_provider.rs
