[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["crates/*", "zomes/coordinator/*", "zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.5.2"
hdk = "=0.4.2"
serde = "1.0"

[workspace.dependencies.example_gateway]
path = "zomes/coordinator/example_gateway"
