[package]
name = "service_providers_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "service_providers_integrity"

[dependencies]
hdi = { workspace = true }

serde = { workspace = true }

roles_types = { git = "https://github.com/darksoil-studio/roles-zome", branch = "main-0.5" }
service_providers_types = { path = "../../../crates/service_providers_types" }
